--- a/css/theme.css
+++ b/css/theme.css
@@ -8,7 +8,8 @@ body {
   min-height: 100vh;
   flex-direction: column;
   color: white;
-  background-color: #34495e;
+  background-image: "/boot/grub/themes/Stylish/background.jpg";
+  /* background-color: #34495e; */
   /* background: radial-gradient(center, ellipse cover, #455a64 10%, #263238 100%); */
   overflow: hidden;
 }
